Fixed problems with header overlap

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html, body {font-size: 100%; height: 100%; position: relative; top: 10%;}
+html, body {margin: 0.5%; font-size: 100%; height: 100%; position: relative; top: 10%;}
 
 p {
   font-size: 1.5vw;
@@ -7,6 +7,13 @@ p {
 img {
   clear: left;
   float: left;
+}
+
+.anchor {
+  display: block;
+  height: 20%; /*double height of header*/
+  margin-top: 10%; /* negative height of header*/
+  visibility: hidden;
 }
 
 /* Navigation Element Styles */
@@ -41,13 +48,10 @@ nav p {
 
 /* */
 
-body > img, div.main-ct {
+body > img, div.main-ct, a img  {
   margin-bottom: 1.5%;
   margin-top: 1.5%;
 	margin-right: 1.5%;
-}
-
-body > img, div.main-ct *, a img {
   width: 18vw;
 }
 
@@ -97,7 +101,7 @@ div.main-ct {
 div.main-ct div.fixed-ct {
   /* Become fixed when element at this y-position from the top */
   position: sticky;
-  top: 50px;
+  top: 120px;
 }
 
 div.main-ct div.fixed-ct p {
@@ -135,9 +139,9 @@ button img {
 footer {
   background-color: slategrey;
   box-sizing: border-box;
-  width: 101.35%;
+  width: 102%;
   padding: 3%;
-  margin-left: -.75%;
+  margin-left: -1%;
 }
 
 footer img {
